--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'E011'
 - !lcsh 'France -- Description and travel'
 - !lcsh 'Indians of North America'
+- GITenberg
 title: "Adventures of the Ojibbeway and Ioway Indians in England, France, and Belgium;\
   \ Vol. 2 (of 2)\r\nbeing Notes of Eight Years' Travels and Residence in Europe with\
   \ his North American Indian Collection"
